# dragoteryx.xyz

./: .gitignore  .prettierrc  CNAME  Cargo.toml  Dockerfile  env.d.ts  index.html  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.node.json  vite.config.ts
.github/workflows/: deploy.yaml  deploy.yml
app/: app.vue  error.vue
app/components/: AsideMenu.vue  CanvasMenu.vue  ControlsMenu.vue  NavButton.vue  ResetButton.vue  ResizableCanvas.vue  ThemeButton.vue
app/composables/: color.ts  controls.ts  math.ts  wasm.ts  webgpu.ts
app/directives/: animations.ts
app/layouts/: default.vue
app/markdown/: unknown.md
app/pages/: [...slug].server.vue  [...slug].vue  boids.client.vue  boids.vue  game-of-life.client.vue  game-of-life.vue  index.vue  particles.vue  sandbox.client.vue  sandbox.vue
app/stores/: boids.client.ts  ffi.ts  game-of-life.ts  gameoflife.client.ts  gameoflife.ts  particles.ts  sandbox.client.ts  sandbox.ts
app/utils/: color.ts
app/wasm/: Cargo.toml
app/wasm/src/: gameoflife.rs  lib.rs  sandbox.rs
app/wasm/src/sandbox/: aabb.rs  entity.rs  util.rs
src/: App.vue  main.ts  router.ts
src/components/: AsideMenu.vue  Canvas2D.vue  CanvasMenu.vue  ControlsMenu.vue  NavButton.vue  PauseMenu.vue  ResizableCanvas.vue  ThemeButton.vue
src/composables/: color.ts  controls.ts  math.ts  misc.ts  mouse.ts
src/directives/: animations.ts  responsive.ts
src/router/: index.ts
src/stores/: boids.ts  dimensions.ts  gameoflife.ts  misc.ts  sandbox.ts
src/styles/: main.scss  mixins.scss
src/wasm/: Cargo.toml
src/wasm/src/: gameoflife.rs  lib.rs  phys.rs  sandbox.rs
src/wasm/src/phys/: entity.rs  util.rs  vector.rs
src/wasm/src/sandbox/: entity.rs  util.rs  vector.rs
(+61 files in other folders)
