[package]
name = "wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.92"
serde_json = "1.0.149"
wasm-bindgen = "0.2.115"

[dependencies.ahash]
version = "0.8.12"
default-features = false
features = [
	"std", "compile-time-rng"
]

[dependencies.web-sys]
version = "0.3.92"
features = [
	"CanvasRenderingContext2d",
	"console"
]
