[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"

[dependencies.ahash]
version = "0.8.11"
default-features = false
features = [
	"std", "compile-time-rng"
]

[dependencies.web-sys]
version = "0.3.69"
features = [
	"CanvasRenderingContext2d",
	"console"
]
