[package]
name = "wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
glam = "0.30.8"
js-sys = "0.3.77"
wasm-bindgen = "0.2.100"

[dependencies.ahash]
version = "0.8.11"
default-features = false
features = [
	"std", "compile-time-rng"
]

[dependencies.web-sys]
version = "0.3.69"
features = [
	"CanvasRenderingContext2d",
	"console"
]
